--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "composer-plugin",
     "require": {
         "composer-plugin-api": "^1.0",
-        "opencart/opencart": ">=2.2 <2.3"
+        "kotygor/opencart": ">=3"
     },
     "license": "GPL 3.0",
     "authors": [
