--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Custom Composer Installer for installing OpenCart Extensions",
     "type": "composer-plugin",
     "require": {
-        "composer-plugin-api": "^1.0",
+        "composer-plugin-api": "~1.1",
         "kotygor/opencart": ">=3"
     },
     "license": "GPL 3.0",
