--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "composer-plugin",
     "require": {
         "composer-plugin-api": "~1.1",
-        "kotygor/opencart": ">=3"
+        "kotygor/opencart": "dev-fcb"
     },
     "license": "GPL 3.0",
     "authors": [
