--- a/composer.json
+++ b/composer.json
@@ -22,5 +22,6 @@
     "require-dev": {
         "composer/composer": "^1.1" ,
         "phpunit/phpunit": "~4"
-    }
+    },
+    "minimum-stability": "dev"
 }
