--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,10 @@
         {
             "type": "git",
             "url": "https://github.com/kotygor/opencart"
+        },
+        {
+            "type": "git",
+            "url": "https://github.com/kotygor/mylog"
         }
     ],
     "license": "GPL 3.0",
@@ -31,7 +35,8 @@
     },
     "require-dev": {
         "composer/composer": "~2" ,
-        "phpunit/phpunit": "~9"
+        "phpunit/phpunit": "~9",
+        "kotygor/mylog": "v2.x-dev"
     },
     "minimum-stability": "dev"
 }
