--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,7 @@
     "description": "Custom Composer Installer for installing OpenCart Extensions",
     "type": "composer-plugin",
     "require": {
-        "composer-plugin-api": "~2",
-        "kotygor/opencart": "*"
+        "composer-plugin-api": "~2"
     },
     "repositories": [
         {
