--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,16 @@
     "description": "Custom Composer Installer for installing OpenCart Extensions",
     "type": "composer-plugin",
     "require": {
-        "composer-plugin-api": "~2"
+        "composer-plugin-api": "~2",
+
+        "braintree/braintree_php" : "3.40.0",
+        "cardinity/cardinity-sdk-php": "^1.0",
+        "divido/divido-php": ">=1.1.1",
+        "klarna/kco_rest": "^2.2",
+        "php": ">=5.4.0",
+        "scssphp/scssphp": "1.1.1",
+        "twig/twig": "^2.4.8",
+        "zoujingli/wechat-php-sdk": ">=1.3.10"
     },
     "license": "GPL 3.0",
     "authors": [
